--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@ a {
   margin: 0 auto;
 }
 
+.d-none {
+  display: none !important;
+}
+
 html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
